--- a/dashboard/src/main/resources/dashboard-client/app/styles/main.css
+++ b/dashboard/src/main/resources/dashboard-client/app/styles/main.css
@@ -74,10 +74,7 @@ body {
     padding-left: 0;
     padding-right: 0;
   }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
+
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
@@ -88,4 +85,50 @@ body {
 /** Bootstrap override **/
 .navbar-default {
   border-bottom: none;
+}
+.navbar-brand {
+  float: left;
+  height: 50px;
+  padding: 15px 35px;
+  font-size: 18px;
+  line-height: 20px;
+}
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.container #sidebar {
+  float: left;
+  width: 16%;
+}
+
+.container #content {
+  float: left;
+  width: 66%;
+}
+
+.page-title {
+  font-weight: bold;
+}
+
+/** components **/
+/** sidebar **/
+#sidebar {
+  border-right:1px solid #DDD;
+  padding-right: 5px;
+  min-height: 500px;
+}
+
+#sidebar li {
+  list-style: none;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 5px;
+}
+
+
+/** content **/
+#content {
+  margin-left: 1%;
 }
