--- a/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
@@ -1,1 +1,24 @@
-Upload entry
+<form name="uploadForm" class="form-horizontal" role="form" ng-controller="uploadEntryController">
+
+
+  <div id="msg-container" class="{{msg.type}}">
+    {{msg.text}}
+  </div>
+
+  <div class="form-group">
+    <label for="uploadFiles" class="col-sm-2 control-label">Upload file</label>
+    <div class="col-sm-4">
+      <input type="file" class="form-control" id="uploadFiles" placeholder="Upload file" name="nameFiles" file-model="namesfile">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button ng-click="upload()" class="btn btn-success">Upload Names</button>
+    </div>
+  </div>
+</form>
+
+<hr/>
+Uploaded spreadsheets should have their column in a particular order [Insert the order here]. We have provided a name entry template
+with the columns in the right other. Download the <a href="{{appEndpoint}}/name_entry_template.xlsx">name entry template here</a>
