#4 various changes of which a chunk is regarding authentication

--- a/dashboard/src/main/resources/dashboard-client/app/views/entry.single.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/entry.single.html
@@ -42,6 +42,13 @@
       </select>
     </div>
   </div>
+
+  <div class="form-group">
+    <div class="col-sm-4">
+      <input type="hidden" value="{{ formEntry.submittedBy }}" class="form-control" id="submittedBy" name="submittedBy" ng-model="formEntry.submittedBy" />
+    </div>
+  </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button ng-click="create()" class="btn btn-success">Create entry</button>
