--- a/dashboard/src/main/resources/dashboard-client/app/views/list.all.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/list.all.html
@@ -15,6 +15,7 @@
       <th>Meaning</th>
       <th>Tonal Mark</th>
       <th>Morphology</th>
+      <th>Submitted By</th>
       <th></th>
     </tr>
     </thead>
@@ -25,6 +26,7 @@
       <td>{{ entry.meaning }}</td>
       <td>{{ entry.tone.toneMark }}</td>
       <td>{{ entry.morphology }}</td>
+      <td>{{ entry.submittedBy }}</td>
       <td>
         <a href="#/list/edit?name={{ entry.name }}" class="btn btn-primary btn-xs">Edit</a>
       </td>
