--- a/dashboard/src/main/resources/dashboard-client/app/styles/main.css
+++ b/dashboard/src/main/resources/dashboard-client/app/styles/main.css
@@ -1,3 +1,12 @@
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+  display: none !important;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
