#6 extend the name attribute

--- a/dashboard/src/main/resources/dashboard-client/app/views/entry.single.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/entry.single.html
@@ -1,58 +1,1 @@
-<form class="form-horizontal" role="form" ng-controller="singleEntryController">
-
-  <div id="msg-container" class="{{msg.type}}">
-        {{msg.text}}
-  </div>
-
-  <div class="form-group">
-    <label for="nameEntry" class="col-sm-2 control-label">Name</label>
-    <div class="col-sm-4">
-      <input class="form-control" id="nameEntry" placeholder="Name" name="name" ng-model="formEntry.name">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="tonalMarkEntry" class="col-sm-2 control-label">Tonal Mark</label>
-    <div class="col-sm-4">
-      <input class="form-control" id="tonalMarkEntry" placeholder="Tonal mark" name="tonalMark" ng-model="formEntry.tonalMark">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="meaningEntry" class="col-sm-2 control-label">Meaning</label>
-    <div class="col-sm-4">
-      <textarea class="form-control" id="meaningEntry" placeholder="Meaning of word" name="meaning" ng-model="formEntry.meaning"></textarea>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="morphologyEntry" class="col-sm-2 control-label">Morphology</label>
-    <div class="col-sm-4">
-      <textarea class="form-control" id="morphologyEntry" placeholder="Morphology" name="morphology" ng-model="formEntry.morphology"></textarea>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="geoLocationEntry" class="col-sm-2 control-label">Geolocation</label>
-    <div class="col-sm-4">
-      <select id="geoLocationEntry" name="geoLocation" ng-model="formEntry.geoLocation">
-        <option value="awori">Awori</option>
-        <option value="egba">Egba</option>
-        <option value="ijesha">Ijesha</option>
-      </select>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-4">
-      <input type="hidden" value="{{ formEntry.submittedBy }}" class="form-control" id="submittedBy" name="submittedBy" ng-model="formEntry.submittedBy" />
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button ng-click="create()" class="btn btn-success">Create entry</button>
-    </div>
-  </div>
-</form>
-
+<nameEntry action="post" duplicates="false"></nameEntry>
