#10 Added endpoint to add/delete name entries to/from ES index

--- a/dashboard/src/main/resources/dashboard-client/app/views/nameentry.directive.template.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/nameentry.directive.template.html
@@ -102,7 +102,7 @@
   <div class="form-group">
     <label for="mediaEntry" class="col-sm-2 control-label">Media</label>
     <div class="col-sm-4">
-      <input class="form-control" id="mediaEntry" placeholder="Pronunciation" name="media" ng-model="formEntry.media">
+      <input class="form-control" id="mediaEntry" placeholder="Media" name="media" ng-model="formEntry.media">
     </div>
   </div>
 
