--- a/dashboard/src/main/resources/dashboard-client/app/styles/main.css
+++ b/dashboard/src/main/resources/dashboard-client/app/styles/main.css
@@ -4,235 +4,248 @@
 [x-ng-cloak],
 .ng-cloak,
 .x-ng-cloak {
-  display: none !important;
+    display: none !important;
 }
 
 .browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
 }
 
 body {
-  padding: 0;
+    padding: 0;
 }
-
 /* Everything but the jumbotron gets side spacing for mobile first views */
+
 .header,
 .page-content,
 .footer {
-  padding-left: 15px;
-  padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
-
 /* Custom page header */
+
 .header {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 /* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
 
+.header h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+    padding-bottom: 19px;
+}
 /* Custom page footer */
+
 .footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+    padding-top: 19px;
+    color: #777;
+    border-top: 1px solid #e5e5e5;
 }
 
 .container-narrow > hr {
-  margin: 30px 0;
+    margin: 30px 0;
 }
-
-
 /** page view **/
+
 .page-content {
-  margin: 15px 0;
+    margin: 15px 0;
 }
 
 .page-content p + h4 {
-  margin-top: 28px;
+    margin-top: 28px;
 }
 
 #msg-container {
-height: 35px;
+    height: 35px;
 }
 
 #msg-container.msg-success {
-  color: #00A000;
-  font-weight: bold;
+    color: #00A000;
+    font-weight: bold;
 }
+
 #msg-container.msg-error {
-  color: #b92c28;
-  font-weight: bold;
+    color: #b92c28;
+    font-weight: bold;
 }
+
 #msg-container.msg-info {
-  color: #eb9316;
-  font-weight: bold;
+    color: #eb9316;
+    font-weight: bold;
 }
-
 /* Responsive: Portrait tablets and up */
+
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 100%;
-    margin-right: 5px;
-    margin-left: 5px;
-    min-height: 600px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .page-content,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-
-
-/** Bootstrap override **/
-.navbar-default {
-  border-bottom: none;
+    .container {
+        max-width: 100%;
+        margin-right: 5px;
+        margin-left: 5px;
+        min-height: 600px;
+    }
+    /* Remove the padding we set earlier */
+    
+    .header,
+    .page-content,
+    .footer {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    /** Bootstrap override **/
+    
+    .navbar-default {
+        border-bottom: none;
+    }
+    .navbar-brand {
+        float: left;
+        height: 50px;
+        padding: 15px 35px;
+        font-size: 18px;
+        line-height: 20px;
+    }
+    .container {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .container #sidebar {
+        float: left;
+        width: 16%;
+    }
+    .page-title {
+        font-weight: bold;
+        margin: 0px;
+        border-bottom: 1px solid #eee;
+    }
+    /** components **/
+    /** sidebar **/
+    
+    #sidebar {
+        min-height: 500px;
+    }
+    #sidebar li {
+        list-style: none;
+        border-bottom: 1px solid #eee;
+        padding: 5px 0px 5px 5px;
+    }
+    #sidebar li:hover {
+        background-color: #F8F8F8;
+    }
+    /** content **/
+    
+    #content {
+        padding-left: 10px;
+        border-left: 1px solid #DDD;
+        float: left;
+        width: 77%;
+    }
 }
-.navbar-brand {
-  float: left;
-  height: 50px;
-  padding: 15px 35px;
-  font-size: 18px;
-  line-height: 20px;
-}
-
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.container #sidebar {
-  float: left;
-  width: 16%;
-}
-
-
-.page-title {
-  font-weight: bold;
-  margin: 0px;
-  border-bottom: 1px solid #eee;
-}
-
-/** components **/
-/** sidebar **/
-#sidebar {
-  min-height: 500px;
-}
-
-#sidebar li {
-  list-style: none;
-  border-bottom: 1px solid #eee;
-  padding: 5px 0px  5px 5px;
-}
-
-
-#sidebar li:hover {
-  background-color: #F8F8F8;
-}
-
-
-/** content **/
-#content {
-  padding-left: 10px;
-  border-left:1px solid #DDD;
-  float: left;
-  width: 77%;
-}}
-
 /** navvar **/
+
 .viewnav {
-  margin-top:10px;
+    margin-top: 10px;
 }
 
 #child-page-title {
-  margin-top: 10px;
-  color: #999;
+    margin-top: 10px;
+    color: #999;
 }
 
 #duplicateList {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 #duplicateList li {
-  list-style: none;
-  overflow: auto;
-  background-color: #F3F3F3;
-  padding: 3px 3px 3px 5px;
-  margin-bottom: 5px;
+    list-style: none;
+    overflow: auto;
+    background-color: #F3F3F3;
+    padding: 3px 3px 3px 5px;
+    margin-bottom: 5px;
 }
 
 #duplicateList li a {
-  float: right;
+    float: right;
 }
 
 #duplicateList .duplicateDetails {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #fff;
-  border: 1px solid #e3e3e3;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 
-
 #profileBox {
-  overflow: auto;
-  padding: 5px;
-  border: 1px solid #DDDDDD;
-  margin-bottom: 20px;
+    overflow: auto;
+    padding: 5px;
+    border: 1px solid #DDDDDD;
+    margin-bottom: 20px;
 }
 
 #profileBox #pix {
-  float: left;
-  width: 75px;
-  overflow: auto;
-  height: 75px;
-  background-color: #eee;
-
+    float: left;
+    width: 75px;
+    overflow: auto;
+    height: 75px;
+    background-color: #eee;
 }
 
 #profileBox #info {
-  float: left;
-  margin-left: 4px;
+    float: left;
+    margin-left: 4px;
 }
 
 #profileBox #pix img {
-  width: 70px;
-  height: auto;
+    width: 70px;
+    height: auto;
 }
 
 .stats div {
-  background-color: #f2f2f2;
-  min-height: 200px;
-  margin-left: 1px;
+    background-color: #f2f2f2;
+    min-height: 200px;
+    margin-left: 1px;
 }
 
 .stats div.right {
-  width: 45%;
-  margin-left: 28px;
+    width: 45%;
+    margin-left: 28px;
 }
 
 .stats div.left {
-  margin-left: 5px;
+    margin-left: 5px;
 }
 
 .search-box {
-  width: 16%;
-  margin-top: 6px;
-  margin-left: 10px;
-  float: left;
+    width: 16%;
+    margin-top: 6px;
+    margin-left: 10px;
+    float: left;
+}
+
+tags-input .tags {
+    -moz-appearance: textfield;
+    -webkit-appearance: textfield;
+    padding: 1px;
+    overflow: hidden;
+    word-wrap: break-word;
+    cursor: text;
+    background-color: white;
+    height: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+tags-input .tags .tag-item {
+    background: khaki;
 }
