--- a/website/src/main/resources/website/website.hbs
+++ b/website/src/main/resources/website/website.hbs
@@ -10,7 +10,7 @@
     Welcome to {{appName}}. <br/>
 
     When locale is en_Us --> {{i18n "lang.welcome"}} <br/>
-    When locale is yoruba --> {{i18n "lang.welcome" bundle="messages_yor"}}
+    When locale is yoruba --> {{i18n "lang.welcome" bundle="messages_yo_NG"}}
 </div>
 <!-- Javascript -->
 {{> scriptIncludes }}
