YOR-2 Added message bundles for Igbo, Hausa and French

--- a/website/src/main/resources/website/website.hbs
+++ b/website/src/main/resources/website/website.hbs
@@ -10,7 +10,10 @@
     Welcome to {{appName}}. <br/>
 
     When locale is en_Us --> {{i18n "lang.welcome"}} <br/>
-    When locale is yoruba --> {{i18n "lang.welcome" bundle="messages_yo_NG"}}
+    When locale is Yoruba --> {{i18n "lang.welcome" bundle="messages_yo_NG"}} <br/>
+    When locale is Igbo --> {{i18n "lang.welcome" bundle="messages_ig_NG"}} <br/>
+    When locale is Hausa --> {{i18n "lang.welcome" bundle="messages_hs_NG"}} <br/>
+    When locale is French --> {{i18n "lang.welcome" bundle="messages_fr"}}
 </div>
 <!-- Javascript -->
 {{> scriptIncludes }}
