--- a/website/src/main/resources/website/website.hbs
+++ b/website/src/main/resources/website/website.hbs
@@ -7,15 +7,32 @@
 
 <body>
 <div class="wrapper">
-    Welcome to {{appName}}. <br/>
 
-    When locale is en_Us --> {{i18n "lang.welcome"}} <br/>
-    When locale is Yoruba --> {{i18n "lang.welcome" bundle="messages_yo_NG"}} <br/>
-    When locale is Igbo --> {{i18n "lang.welcome" bundle="messages_ig_NG"}} <br/>
-    When locale is Hausa --> {{i18n "lang.welcome" bundle="messages_hs_NG"}} <br/>
-    When locale is French --> {{i18n "lang.welcome" bundle="messages_fr"}}
+    Welcome to {{appName}}. <br/><br/>
+
+    Switch Language:
+    <select onChange="window.document.location.href=this.options[this.selectedIndex].value;">
+
+        <option id="en" value="/?lang=en">English</option>
+        <option id="yo" value="/?lang=yo">Yoruba</option>
+        <option id="hs" value="/?lang=hs">Hausa</option>
+        <option id="ig" value="/?lang=ig">Igbo</option>
+        <option id="fr" value="/?lang=fr">French</option>
+    </select>
+    <br/>
+
+    Welcome message: --> {{message "lang.welcome"}} <br/>
+
 </div>
 <!-- Javascript -->
 {{> scriptIncludes }}
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        var id = document.location.search.split("=")[1];
+        $("#"+id).attr("selected", "selected");
+    });
+</script>
+
 </body>
 </html>
